change some styles

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               Step into a world where the art of Interior Design is meticulously crafted to bring together timeless elegance and cutting-edge 
               modern Innovation, Allowing you to transform your living spaces into the epitome of luxury and sophistication
             </p>
-            <button class="btn btn-dark btn-lg px-5 py-3 mb-5">Start Project</button>
+            <button class="btn btn-dark btn-lg px-4 py-2 mb-5 px-lg-5 py-lg-3">Start Project</button>
             <ul class="list-unstyled row col-12 col-lg-8 text-center">
               <li class="col">
                 <p class="fw-bold h1 text-secondary mb-0">400+</p>
@@ -235,7 +235,7 @@
           Be the first to discover trends, inspirations, and special offers as<br>
           we bring the world of design directly to your inbox
         </p>
-        <div class="col-md-6 w-75 mx-auto p-2 bg-white">
+        <div class="sub col-md-6 w-75 mx-auto p-2 bg-white">
           <div class="input-group ps-4">
             <i class="fa-regular fa-envelope text-secondary d-flex align-items-center"></i>
             <input type="email" class="form-control py-3 border-0 outline-none shadow-none" placeholder="Enter your email address">
