change max-height of img in design section and padding of buttons

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
       <div class="container">
         <div class="row row-cols-1 row-cols-lg-2 gy-4">
           <div class="col-12 col-lg-6">
-            <img src="images/dasigning-Image1.png" alt="" class="img-fluid w-100" style="height: 400px; object-fit: cover;">
+            <img src="images/dasigning-Image1.png" alt="" class="img-fluid w-100" style="height: 100%; max-height: 550px; object-fit: cover;">
           </div>
           <div class="design-content col-12 col-lg-6">
             <h3 class="mb-4">Designing Your Dream With Brilliance</h3>
@@ -133,7 +133,7 @@
               <span class="fw-bold">Commercial Office Room Interior Design</span>
               <i class="fa-solid fa-plus"></i>
             </div>
-            <button class="btn btn-dark btn-lg px-5 py-3 mt-4">Learn More</button>
+            <button class="btn btn-dark btn-lg px-4 py-2 mt-4 px-lg-5 py-lg-3">Learn More</button>
           </div>
         </div>
       </div>
@@ -183,7 +183,7 @@
             </div>
           </div>
           <div class="col-12 col-lg-6">
-            <img src="images/dasigning-Image2.png" alt="" class="img-fluid w-100" style="height: 400px; object-fit: cover;">
+            <img src="images/dasigning-Image2.png" alt="" class="img-fluid w-100" style="height: 100%; max-height: 550px; object-fit: cover;">
           </div>
         </div>
       </div>
@@ -239,7 +239,7 @@
           <div class="input-group ps-4">
             <i class="fa-regular fa-envelope text-secondary d-flex align-items-center"></i>
             <input type="email" class="form-control py-3 border-0 outline-none shadow-none" placeholder="Enter your email address">
-            <button class="btn btn-dark px-4">Subscribe</button>
+            <button class="btn btn-dark px-3 px-lg-4">Subscribe</button>
           </div>
         </div>
       </div>
